tests/sksl/errors/InterfaceBlockMixedCommasAndSemicolons.glsl
### Compilation failed:

error: 1: expected a type, but found ','
uniform foo { int x;, y;, z; };
                    ^
1 error
